# meta24

./: .bazelrc  .gitmodules  BUILD  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  build.zig  common.h  flake.nix  meta24.cc  meta24.h  meta24_constexpr.cc  meta24_constexpr.h  meta24_constexpr_test.cc  meta24_hana.cc  meta24_hana.h  meta24_hana_test.cc  meta24_metal.cc  meta24_metal.h  meta24_metal_test.cc  meta24_mp11.h  meta24_test.cc
