load("@rules_cc//cc:defs.bzl", "cc_test")

cc_library(
    name = "common",
    hdrs = ["common.h"],
)

cc_library(
    name = "mp11",
    hdrs = glob(["mp11/include/**/*.hpp"]),
    includes = ["mp11/include/"],
)

cc_library(
    name = "meta24_mp11_lib",
    hdrs = ["meta24_mp11.h"],
    deps = [
        ":common",
        "//:mp11",
    ],
)

cc_test(
    name = "meta24_test",
    size = "small",
    srcs = ["meta24_test.cc"],
    defines = ["MP11"],
    deps = [
        ":meta24_mp11_lib",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "meta24",
    srcs = ["meta24.cc"],
    defines = ["MP11"],
    deps = [":meta24_mp11_lib"],
    linkstatic = 0,
)

cc_library(
    name = "metal_lib",
    hdrs = glob(["metal/include/**/*.hpp"]),
    includes = ["metal/include/"],
)

cc_library(
    name = "meta24_metal_lib",
    hdrs = ["meta24_metal.h"],
    deps = [
        "common",
        ":metal_lib",
    ],
)

cc_test(
    name = "meta24_metal_test",
    size = "small",
    srcs = ["meta24_test.cc"],
    defines = ["METAL"],
    deps = [
        ":meta24_metal_lib",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "meta24_metal",
    srcs = ["meta24.cc"],
    defines = ["METAL"],
    deps = [
        ":meta24_metal_lib",
    ],
    linkstatic = 0,
)
